--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@fortawesome/free-brands-svg-icons": "^6.2.1",
 		"@fortawesome/free-solid-svg-icons": "^6.2.1",
 		"@zerodevx/svelte-toast": "^0.8.2",
+		"node-localstorage": "^2.2.1",
 		"svelte-fa": "^3.0.3"
 	}
 }
