--- a/src/lib/js/config.json
+++ b/src/lib/js/config.json
@@ -1,3 +1,4 @@
 {
-    "host": "http://127.0.0.1:8080"
+    "host": "http://127.0.0.1:8080",
+    "defaultAvatar": "https://st2.depositphotos.com/4111759/12123/v/950/depositphotos_121233262-stock-illustration-male-default-placeholder-avatar-profile.jpg"
 }
