--- a/src/lib/js/config.json
+++ b/src/lib/js/config.json
@@ -1,4 +1,5 @@
 {
+    "API_BASE": "/api/v0/",
     "ws_host": "ws://127.0.0.1:8080/api/v0/conversations",
     "http_host": "http://127.0.0.1:8080",
     "defaultAvatar": "https://st2.depositphotos.com/4111759/12123/v/950/depositphotos_121233262-stock-illustration-male-default-placeholder-avatar-profile.jpg"
