--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@fortawesome/free-solid-svg-icons": "^6.2.1",
 		"@zerodevx/svelte-toast": "^0.8.2",
 		"node-localstorage": "^2.2.1",
+		"socket.io-client": "^4.5.4",
 		"svelte-fa": "^3.0.3"
 	}
 }
