--- a/src/lib/js/config.json
+++ b/src/lib/js/config.json
@@ -1,6 +1,7 @@
 {
     "API_BASE": "/api/v0/",
-    "ws_host": "ws://127.0.0.1:8080/api/v0/conversations",
+    "SOCKET_BASE": "/api/v0/conversations/socket",
+    "ws_host": "ws://127.0.0.1:8080",
     "ws_host__": "wss://iris-api.fly.dev/api/v0/conversations",
     "http_host": "http://127.0.0.1:8080",
     "http_host__": "https://iris-api.fly.dev",
