--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
         # the latest version for the target platform will be installed. Example: "0.0.306".
         version: latest
     - run: |
-        flyctl deploy -t ${fly_token}
+        flyctl deploy -t $(fly_token)
