--- a/src/lib/xs/config.json
+++ b/src/lib/xs/config.json
@@ -1,9 +1,7 @@
 {
     "API_BASE": "/api/v0/",
     "SOCKET_BASE": "/api/v0/conversations/socket",
-    "ws_host..": "wss://ether-api.onrender.com",
-    "ws_host": "ws://localhost:8080",
-    "http_host": "http://localhost:8080",
-    "http_host..": "https://ether-api.onrender.com",
+    "ws_host": "wss://ether-api.onrender.com",
+    "http_host": "https://ether-api.onrender.com",
     "defaultAvatar": "https://st2.depositphotos.com/4111759/12123/v/950/depositphotos_121233262-stock-illustration-male-default-placeholder-avatar-profile.jpg"
 }
