--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,19 +5,18 @@ name: SvelteKit Deploy
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
   pull_request:
-    branches: [ "main" ]
+    branches: ['main']
   workflow_dispatch:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    steps:    
-    - uses: actions/checkout@v3  
-    - name: Set up flyctl
-      uses: superfly/flyctl-actions/setup-flyctl@master
-    - run: flyctl deploy --remote-only
-      env:
-        FLY_API_TOKEN: ${{ secrets.FLYIO_ACCESS }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up flyctl
+        uses: superfly/flyctl-actions/setup-flyctl@master
+      - run: flyctl deploy --remote-only
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLYIO_ACCESS }}
