--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -4,6 +4,8 @@
 name: SvelteKit Deploy (App)
 
 on:
+  schedule:
+  - cron: "0 * * * 0" # Every Sunday of the month
   push:
     branches: ['overhaul-001']
   pull_request:
